style.css
html, body {
    margin:0;
    height:100%;
    font-family: 'Times New Roman', Times, serif;
  }

.big-container {
  width:100%;
  height:100vh; 
  background-image: url("https://media.istockphoto.com/id/1126130554/photo/row-of-old-books-with-colorful-covers-on-pastel-blue-background-education-concept-mock-up-for.jpg?b=1&s=612x612&w=0&k=20&c=IAXpj-Uxt2cK9GebK-3mi_qOH0mSfl2aDK1i_jKyJFM=");
  background-size: cover;
  background-repeat: no-repeat;
  box-sizing: border-box;
  position: relative;
  text-align: center;
  color: rgb(0, 140, 255);
  padding-top: 100px;
  }

h1 {
  color: rgb(0, 140, 255);
}

.hidden {
  display: none;
}

/* #home-page {
  width:100%;
  height:100vh; 
  background-image: url("https://media.istockphoto.com/id/1126130554/photo/row-of-old-books-with-colorful-covers-on-pastel-blue-background-education-concept-mock-up-for.jpg?b=1&s=612x612&w=0&k=20&c=IAXpj-Uxt2cK9GebK-3mi_qOH0mSfl2aDK1i_jKyJFM=");
  background-size: cover;
  background-repeat: no-repeat;
  box-sizing: border-box;
  position: relative;
  text-align: center;
  padding-top: 50px;
} */

.home-page-nav-bar {
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
  padding-inline-start: 5vw;
}

.browse-page-nav-bar {
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
  padding-inline-start: 5vw;
}

.my-books-page-nav-bar {
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
  padding-inline-start: 5vw;
}

.home-page-nav-list {
  display: inline;
  color: black;
  padding-inline-start: 5vw;
  padding-inline-end: 5vw;
}

.book-card {
  padding-top: 10px;
  padding-left: 400px;
}

.book-covers-div {
  padding-top: 5px;
  padding-bottom: 5px;
}

.book-covers {
  width: 500px
}

